2004-03-22 Braden McDaniel  <braden@endoframe.com>

	Formatting improvements to the NIST test suite result table.

	* doc/conformance.doc
	* doc/doxygen-header

2004-03-22 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(point_set_node::modified, shape_node::modified):  Fixed
	recursive call.

2004-03-22 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(viewer::insert_shell):  Only build vector of vertices when
	drawing shells with non-convex polygons.

2004-03-21 Braden McDaniel  <braden@endoframe.com>

	* test/node_interface_set.cpp:  Added some unit tests for
	node_interface_set.

2004-03-21 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/script.cpp
	({anonymous}::js_::script::activate):  When converting the
	script function arguments to jsvals, only add GC roots to
	garbage-collected things; i.e., jsvals for which
	JSVAL_IS_GCTHING returns true.

2004-03-20 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  Rewrote use of GLU
	tesselator.  The previous code assumed that the GLU_TESS_VERTEX
	callback was called synchronously with calls to gluTessVertex.
	There is no such guarantee.

2004-03-14 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp (browser::browser):
	Removed unnecessary call to browser::load_url.

2004-03-14 Braden McDaniel  <braden@endoframe.com>

	Fixed crashes associated with subsequent calls to
	browser::load_url.

	* src/libopenvrml/openvrml/browser.cpp (scene::scene):  Throw
	no_alternative_url if no alternative URI can be resolved.
	* src/libopenvrml/openvrml/browser.h:  Added no_alternative_url
	exception.
	* src/libopenvrml/openvrml/system.cpp (system::http_fetch):
	Don't attempt to construct a std::string from a null pointer.

2004-03-13 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(anchor_node::do_render_child):  Fixed recursive call to